refactor: simplify OPA test resource initialization by removing error handling and update README test statistics.